# renameFile

./: .clang-format  .clang-tidy  .clangd  .gitattributes  CMakeLists.txt  README.md  REFERENCES.md
.zed/: debug.json  settings.json  tasks.json
doc/: CMakeLists.txt  Doxyfile.in
src/: CmakeConfig.h.in  functions.cpp  functions.hpp  main.cpp
tests/: CMakeLists.txt  main.cpp
